# confluence2md

./: LICENCE.md  README.md  config.yaml.example  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/confluence2md/: __init__.py  cli.py  client.py  config.py  renderer.py  spaces.py
tests/: test_client.py  test_config.py  test_renderer.py  test_spaces.py
